// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapMargin renders 0 1`] = `
Array [
  .c0 {
  wrap-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders function 1`] = `
Array [
  .c0 {
  wrap-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders negative number 1`] = `
Array [
  .c0 {
  wrap-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  wrap-margin: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-margin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  wrap-margin: July;
}

@media May {
  .c0 {
    wrap-margin: August;
  }
}

@media April {
  .c0 {
    wrap-margin: September;
  }
}

@media January {
  .c0 {
    wrap-margin: November;
  }
}

@media April {
  .c0 {
    wrap-margin: August;
  }
}

@media June {
  .c0 {
    wrap-margin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: July;
}

@media May {
  .c0 {
    wrap-margin: August;
  }
}

@media April {
  .c0 {
    wrap-margin: September;
  }
}

@media January {
  .c0 {
    wrap-margin: November;
  }
}

@media April {
  .c0 {
    wrap-margin: August;
  }
}

@media June {
  .c0 {
    wrap-margin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-margin: November;
  }
}

@media April {
  .c0 {
    wrap-margin: January;
  }
}

@media January {
  .c0 {
    wrap-margin: December;
  }
}

@media April {
  .c0 {
    wrap-margin: April;
  }
}

@media June {
  .c0 {
    wrap-margin: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-margin: November;
  }
}

@media April {
  .c0 {
    wrap-margin: January;
  }
}

@media January {
  .c0 {
    wrap-margin: December;
  }
}

@media April {
  .c0 {
    wrap-margin: April;
  }
}

@media June {
  .c0 {
    wrap-margin: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    wrap-margin: July;
  }
}

@media April {
  .c0 {
    wrap-margin: August;
  }
}

@media January {
  .c0 {
    wrap-margin: September;
  }
}

@media April {
  .c0 {
    wrap-margin: November;
  }
}

@media June {
  .c0 {
    wrap-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-margin: July;
  }
}

@media April {
  .c0 {
    wrap-margin: August;
  }
}

@media January {
  .c0 {
    wrap-margin: September;
  }
}

@media April {
  .c0 {
    wrap-margin: November;
  }
}

@media June {
  .c0 {
    wrap-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-margin: January;
  }
}

@media April {
  .c0 {
    wrap-margin: December;
  }
}

@media January {
  .c0 {
    wrap-margin: April;
  }
}

@media April {
  .c0 {
    wrap-margin: May;
  }
}

@media June {
  .c0 {
    wrap-margin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-margin: January;
  }
}

@media April {
  .c0 {
    wrap-margin: December;
  }
}

@media January {
  .c0 {
    wrap-margin: April;
  }
}

@media April {
  .c0 {
    wrap-margin: May;
  }
}

@media June {
  .c0 {
    wrap-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders postitive number 1`] = `
Array [
  .c0 {
  wrap-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders string 1`] = `
Array [
  .c0 {
  wrap-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapMargin renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wrapMargin renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
